# smolcrawler

./: README.md  cache.sqlite  pyproject.toml  test_debug.py
examples/: cli.py
src/smolcrawler/: __init__.py  content_detector.py  crawler.py  url_utils.py  utils.py
tests/: test_crawler.py  test_get_default_prefix_url.py  test_url_utils.py  test_utils.py
