[project]
name = "smolcrawler"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "RoCry", email = "crysheen@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "fire>=0.7.0",
    "httpx>=0.28.1",
    "localwebpy",
    "loguru>=0.7.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv.sources]
localwebpy = { git = "https://github.com/RoCry/localwebpy" }

[tool.ruff.lint]
extend-select = ["I"]
