[project]
name = "smolcrawler"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "RoCry", email = "crysheen@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "fire>=0.7.0",
    "httpx>=0.28.1",
    "localwebpy",
    "loguru>=0.7.3",
]

[project.optional-dependencies]
test = [
    "pytest>=8.3.5",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff.lint]
extend-select = ["I"]

[tool.uv.sources]
localwebpy = { path = "../localwebpy" }
